[project]
name = "mdlook"
version = "0.0.0.dev"
description = "Sync Outlook emails to markdown files"
requires-python = ">=3.11"
dependencies = [
    "pywin32",
    "click",
    "html2text",
    "platformdirs>=4.9.4",
]

[project.scripts]
mdlook = "mdlook.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
